src/test/ui/issues/issue-1448-2.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-1448-2.rs:6:20
   |
LL |     println!("{}", foo(10i32));
   |                    ^^^^-----^
   |                        |
   |                        expected `u32`, found `i32`
   |
note: function defined here
  --> $DIR/issue-1448-2.rs:3:4
   |
LL | fn foo(a: u32) -> u32 { a }
   |    ^^^ ------
help: provide an argument of the correct type
   |
LL |     println!("{}", foo({u32}));
   |                    ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
